Add hospital page responsive

--- a/hospitals.html
+++ b/hospitals.html
@@ -390,7 +390,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-xl-12 wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="300ms">
-                                <div class="rt-card rt-card--style-3 d-flex flex-column flex-md-row align-items-center">
+                                <div class="rt-card rt-card--style-3 d-flex flex-column flex-md-row align-items-start align-items-md-center flex-wrap">
                                     <div class="item-img">
                                         <a href="">
                                             <img src="images/hospital/hospital-img-5.jpg" alt="doctor-img">
@@ -469,7 +469,7 @@
                                 </div>
                             </div>
                             <div class="col-xl-12 wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="300ms">
-                                <div class="rt-card rt-card--style-3 d-flex flex-column flex-md-row align-items-center">
+                                <div class="rt-card rt-card--style-3 d-flex flex-column flex-md-row align-items-start align-items-md-center flex-wrap">
 
                                     <div class="item-img">
                                         <a href="">
@@ -549,7 +549,7 @@
                                 </div>
                             </div>
                             <div class="col-xl-12 wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="300ms">
-                                <div class="rt-card rt-card--style-3 d-flex flex-column flex-md-row align-items-center">
+                                <div class="rt-card rt-card--style-3 d-flex flex-column flex-md-row align-items-start align-items-md-center flex-wrap">
 
                                     <div class="item-img">
                                         <a href="">
@@ -629,7 +629,7 @@
                                 </div>
                             </div>
                             <div class="col-xl-12 wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="300ms">
-                                <div class="rt-card rt-card--style-3 d-flex flex-column flex-md-row align-items-center">
+                                <div class="rt-card rt-card--style-3 d-flex flex-column flex-md-row align-items-start align-items-md-center flex-wrap">
 
                                     <div class="item-img">
                                         <a href="">
@@ -709,7 +709,7 @@
                                 </div>
                             </div>
                             <div class="col-xl-12 wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="300ms">
-                                <div class="rt-card rt-card--style-3 d-flex flex-column flex-md-row align-items-center">
+                                <div class="rt-card rt-card--style-3 d-flex flex-column flex-md-row align-items-start align-items-md-center flex-wrap">
 
                                     <div class="item-img">
                                         <a href="">
@@ -789,7 +789,7 @@
                                 </div>
                             </div>
                             <div class="col-xl-12 wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="300ms">
-                                <div class="rt-card rt-card--style-3 d-flex flex-column flex-md-row align-items-center">
+                                <div class="rt-card rt-card--style-3 d-flex flex-column flex-md-row align-items-start align-items-md-center flex-wrap">
 
                                     <div class="item-img">
                                         <a href="">
