Fix issues after qc

--- a/blog.html
+++ b/blog.html
@@ -398,7 +398,7 @@
                         <div class="row gutters-30">
                             <div class="col-lg-8 col-xl-8">
                                 <div class="row">
-                                    <div class="col-md-12 col-lg-6 col-xl-6">
+                                    <div class="col-md-6 col-lg-6 col-xl-6">
                                         <div class="rt-card rt-card--style-10 mb-4 mb-lg-0">
                                             <div class="item-img">
                                                 <img src="images/blog/blog-img-5.jpg" alt="">
@@ -422,7 +422,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-12 col-lg-6 col-xl-6">
+                                    <div class="col-md-6 col-lg-6 col-xl-6">
                                         <div class="rt-card rt-card--style-10 mb-4 mb-lg-0">
                                             <div class="item-img">
                                                 <img src="images/blog/blog-img-6.jpg" alt="">
@@ -446,7 +446,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-12 col-lg-6 col-xl-6">
+                                    <div class="col-md-6 col-lg-6 col-xl-6">
                                         <div class="rt-card rt-card--style-10 mb-4 mb-lg-0">
                                             <div class="item-img">
                                                 <img src="images/blog/blog-img-7.jpg" alt="">
@@ -470,7 +470,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-12 col-lg-6 col-xl-6">
+                                    <div class="col-md-6 col-lg-6 col-xl-6">
                                         <div class="rt-card rt-card--style-10 mb-4 mb-lg-0">
                                             <div class="item-img">
                                                 <img src="images/blog/blog-img-8.jpg" alt="">
@@ -494,7 +494,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-12 col-lg-6 col-xl-6">
+                                    <div class="col-md-6 col-lg-6 col-xl-6">
                                         <div class="rt-card rt-card--style-10 mb-4 mb-lg-0">
                                             <div class="item-img">
                                                 <img src="images/blog/blog-img-9.jpg" alt="">
@@ -518,7 +518,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-12 col-lg-6 col-xl-6">
+                                    <div class="col-md-6 col-lg-6 col-xl-6">
                                         <div class="rt-card rt-card--style-10 mb-4 mb-lg-0">
                                             <div class="item-img">
                                                 <img src="images/blog/blog-img-10.jpg" alt="">
@@ -542,7 +542,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-12 col-lg-6 col-xl-6">
+                                    <div class="col-md-6 col-lg-6 col-xl-6">
                                         <div class="rt-card rt-card--style-10 mb-4 mb-lg-0">
                                             <div class="item-img">
                                                 <img src="images/blog/blog-img-11.jpg" alt="">
@@ -566,7 +566,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-12 col-lg-6 col-xl-6">
+                                    <div class="col-md-6 col-lg-6 col-xl-6">
                                         <div class="rt-card rt-card--style-10 mb-4 mb-lg-0">
                                             <div class="item-img">
                                                 <img src="images/blog/blog-img-12.jpg" alt="">
@@ -1232,6 +1232,7 @@
     <script src="assets/jquery-nice-select/js/jquery.nice-select.js"></script>
     <script src="assets/marquee/jquery.marquee.js"></script>
     <script src="assets/marquee/jquery.marquee.min.js"></script>
+    <script src="assets/select2/js/select2.min.js"></script>
     <!-- For counterUp -->
     <script src="assets/odometer/js/odometer.min.js"></script>
     <script src="assets/video/video.min.js"></script>
