--- a/hospitals.html
+++ b/hospitals.html
@@ -1348,6 +1348,7 @@
     <script src="assets/jquery-nice-select/js/jquery.nice-select.js"></script>
     <script src="assets/marquee/jquery.marquee.js"></script>
     <script src="assets/marquee/jquery.marquee.min.js"></script>
+    <script src="assets/select2/js/select2.min.js"></script>
     <!-- For counterUp -->
     <script src="assets/odometer/js/odometer.min.js"></script>
     <script src="assets/video/video.min.js"></script>
