--- a/doctor-details.html
+++ b/doctor-details.html
@@ -438,7 +438,7 @@
                                             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla any more pariatu.
                                         </p>
 
-                                        <div class="d-flex gap-2">
+                                        <div class="d-flex gap-2 flex-wrap">
                                             <div class="item-action">
                                                 <div class="favourite">
                                                     <a href="" class="circle-radius d-flex justify-content-center align-items-center">
